--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -1,5 +1,7 @@
 FROM mcr.microsoft.com/devcontainers/javascript-node:1-22-bookworm
-
+COPY . /app
+WORKDIR /app
+RUN rm -f ./dump.rdb
 RUN apt-get update \
   && apt-get install -y \
   iputils-ping \
@@ -11,9 +13,6 @@ RUN curl https://qlty.sh | /bin/bash \
   && rm -rf ~/.qlty \
   && qlty --version
 
-RUN redis-server --daemonize yes
 EXPOSE 4567
-RUN ./nodebb setup
-RUN ./nodebb build
-RUN npm i
-CMD ["./nodebb","start"]
+
+CMD ["/bin/sh","./railway-start.sh"]
