--- a/public/openapi/components/schemas/PostObject.yaml
+++ b/public/openapi/components/schemas/PostObject.yaml
@@ -2,6 +2,19 @@ PostObject:
   description: A single post in the array returned from `Posts.getPostSummaryByPids`
   type: object
   properties:
+    endorsedVotes:
+      type: array
+      items:
+        type: object
+        properties:
+          username:
+            type: string
+          uid:
+            type: number
+          displayname:
+            type: string
+          isLocal:
+            type: boolean
     pid:
       type: number
     tid:
@@ -54,7 +67,8 @@ PostObject:
           description: This is either username or fullname depending on forum and user settings
         userslug:
           type: string
-          description: An URL-safe variant of the username (i.e. lower-cased, spaces
+          description:
+            An URL-safe variant of the username (i.e. lower-cased, spaces
             removed, etc.)
         picture:
           type: string
@@ -63,12 +77,14 @@ PostObject:
           type: string
         icon:text:
           type: string
-          description: A single-letter representation of a username. This is used in the
+          description:
+            A single-letter representation of a username. This is used in the
             auto-generated icon given to users without
             an avatar
         icon:bgColor:
           type: string
-          description: A six-character hexadecimal colour code assigned to the user. This
+          description:
+            A six-character hexadecimal colour code assigned to the user. This
             value is used in conjunction with
             `icon:text` for the user's auto-generated
             icon
@@ -102,7 +118,8 @@ PostObject:
           type: number
         mainPid:
           type: number
-          description: The post id of the first post in this topic (also called the
+          description:
+            The post id of the first post in this topic (also called the
             "original post")
         teaserPid:
           type: number
@@ -140,7 +157,8 @@ PostObject:
           type: string
         parentCid:
           type: number
-          description: The category identifier for the category that is the immediate
+          description:
+            The category identifier for the category that is the immediate
             ancestor of the current category
         bgColor:
           type: string
@@ -160,6 +178,19 @@ PostDataObject:
   allOf:
     - type: object
       properties:
+        endorsedVotes:
+          type: array
+          items:
+            type: object
+            properties:
+              username:
+                type: string
+              uid:
+                type: number
+              displayname:
+                type: string
+              isLocal:
+                type: boolean
         pid:
           type: number
         uid:
@@ -212,7 +243,8 @@ PostDataObject:
               description: This is either username or fullname depending on forum and user settings
             userslug:
               type: string
-              description: An URL-safe variant of the username (i.e. lower-cased, spaces
+              description:
+                An URL-safe variant of the username (i.e. lower-cased, spaces
                 removed, etc.)
             reputation:
               type: number
@@ -249,12 +281,14 @@ PostDataObject:
               nullable: true
             icon:text:
               type: string
-              description: A single-letter representation of a username. This is used in the
+              description:
+                A single-letter representation of a username. This is used in the
                 auto-generated icon given to users without
                 an avatar
             icon:bgColor:
               type: string
-              description: A six-character hexadecimal colour code assigned to the user. This
+              description:
+                A six-character hexadecimal colour code assigned to the user. This
                 value is used in conjunction with
                 `icon:text` for the user's auto-generated
                 icon
@@ -317,7 +351,8 @@ PostDataObject:
                     description: A friendly name for a given user account
                   userslug:
                     type: string
-                    description: An URL-safe variant of the username (i.e. lower-cased, spaces
+                    description:
+                      An URL-safe variant of the username (i.e. lower-cased, spaces
                       removed, etc.)
                   picture:
                     type: string
@@ -326,12 +361,14 @@ PostDataObject:
                     description: A user identifier
                   icon:text:
                     type: string
-                    description: A single-letter representation of a username. This is used in the
+                    description:
+                      A single-letter representation of a username. This is used in the
                       auto-generated icon given to users without
                       an avatar
                   icon:bgColor:
                     type: string
-                    description: A six-character hexadecimal colour code assigned to the user. This
+                    description:
+                      A six-character hexadecimal colour code assigned to the user. This
                       value is used in conjunction with
                       `icon:text` for the user's auto-generated
                       icon
