--- a/public/openapi/read/categories.yaml
+++ b/public/openapi/read/categories.yaml
@@ -76,6 +76,19 @@ get:
                                         items:
                                           type: object
                                           properties:
+                                            endorsedVotes:
+                                              type: array
+                                              items:
+                                                type: object
+                                                properties:
+                                                  username:
+                                                    type: string
+                                                  uid:
+                                                    type: number
+                                                  displayname:
+                                                    type: string
+                                                  isLocal:
+                                                    type: boolean
                                             pid:
                                               type: number
                                             timestamp:
@@ -96,19 +109,22 @@ get:
                                                   description: A friendly name for a given user account
                                                 userslug:
                                                   type: string
-                                                  description: An URL-safe variant of the username (i.e. lower-cased, spaces
+                                                  description:
+                                                    An URL-safe variant of the username (i.e. lower-cased, spaces
                                                     removed, etc.)
                                                 picture:
                                                   nullable: true
                                                   type: string
                                                 icon:text:
                                                   type: string
-                                                  description: A single-letter representation of a username. This is used in the
+                                                  description:
+                                                    A single-letter representation of a username. This is used in the
                                                     auto-generated icon given to
                                                     users without an avatar
                                                 icon:bgColor:
                                                   type: string
-                                                  description: A six-character hexadecimal colour code assigned to the user. This
+                                                  description:
+                                                    A six-character hexadecimal colour code assigned to the user. This
                                                     value is used in conjunction
                                                     with `icon:text` for the user's
                                                     auto-generated icon
@@ -134,6 +150,19 @@ get:
                               items:
                                 type: object
                                 properties:
+                                  endorsedVotes:
+                                    type: array
+                                    items:
+                                      type: object
+                                      properties:
+                                        username:
+                                          type: string
+                                        uid:
+                                          type: number
+                                        displayname:
+                                          type: string
+                                        isLocal:
+                                          type: boolean
                                   pid:
                                     type: number
                                   tid:
@@ -165,19 +194,22 @@ get:
                                         description: This is either username or fullname depending on forum and user settings
                                       userslug:
                                         type: string
-                                        description: An URL-safe variant of the username (i.e. lower-cased, spaces
+                                        description:
+                                          An URL-safe variant of the username (i.e. lower-cased, spaces
                                           removed, etc.)
                                       picture:
                                         nullable: true
                                         type: string
                                       icon:text:
                                         type: string
-                                        description: A single-letter representation of a username. This is used in the
+                                        description:
+                                          A single-letter representation of a username. This is used in the
                                           auto-generated icon given to users
                                           without an avatar
                                       icon:bgColor:
                                         type: string
-                                        description: A six-character hexadecimal colour code assigned to the user. This
+                                        description:
+                                          A six-character hexadecimal colour code assigned to the user. This
                                           value is used in conjunction with
                                           `icon:text` for the user's
                                           auto-generated icon
@@ -223,32 +255,32 @@ get:
                                 user:
                                   type: object
                                   properties:
-                                      uid:
-                                        type: number
-                                        example: 1
-                                      isLocal:
-                                        type: boolean
-                                        description: Whether the user belongs to the local installation or not.
-                                      username:
-                                        type: string
-                                        example: Dragon Fruit
-                                      userslug:
-                                        type: string
-                                        example: dragon-fruit
-                                      picture:
-                                        type: string
-                                        example: 'https://images.unsplash.com/photo-1560070094-e1f2ddec4337?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=256&h=256&q=80'
-                                        nullable: true
-                                      displayname:
-                                        type: string
-                                        description: This is either username or fullname depending on forum and user settings
-                                        example: Dragon Fruit
-                                      'icon:text':
-                                        type: string
-                                        example: D
-                                      'icon:bgColor':
-                                        type: string
-                                        example: '#9c27b0'
+                                    uid:
+                                      type: number
+                                      example: 1
+                                    isLocal:
+                                      type: boolean
+                                      description: Whether the user belongs to the local installation or not.
+                                    username:
+                                      type: string
+                                      example: Dragon Fruit
+                                    userslug:
+                                      type: string
+                                      example: dragon-fruit
+                                    picture:
+                                      type: string
+                                      example: "https://images.unsplash.com/photo-1560070094-e1f2ddec4337?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=256&h=256&q=80"
+                                      nullable: true
+                                    displayname:
+                                      type: string
+                                      description: This is either username or fullname depending on forum and user settings
+                                      example: Dragon Fruit
+                                    "icon:text":
+                                      type: string
+                                      example: D
+                                    "icon:bgColor":
+                                      type: string
+                                      example: "#9c27b0"
                             imageClass:
                               type: string
               - $ref: ../components/schemas/Pagination.yaml#/Pagination
