--- a/public/openapi/read/post-queue.yaml
+++ b/public/openapi/read/post-queue.yaml
@@ -35,6 +35,19 @@ get:
                       allOf:
                         - type: object
                           properties:
+                            endorsedVotes:
+                              type: array
+                              items:
+                                type: object
+                                properties:
+                                  username:
+                                    type: string
+                                  uid:
+                                    type: number
+                                  displayname:
+                                    type: string
+                                  isLocal:
+                                    type: boolean
                             id:
                               type: string
                             uid:
@@ -134,7 +147,8 @@ get:
                                   description: A friendly name for a given user account
                                 userslug:
                                   type: string
-                                  description: An URL-safe variant of the username (i.e. lower-cased, spaces
+                                  description:
+                                    An URL-safe variant of the username (i.e. lower-cased, spaces
                                     removed, etc.)
                                 picture:
                                   nullable: true
@@ -144,12 +158,14 @@ get:
                                   description: A user identifier
                                 icon:text:
                                   type: string
-                                  description: A single-letter representation of a username. This is used in the
+                                  description:
+                                    A single-letter representation of a username. This is used in the
                                     auto-generated icon given to users without
                                     an avatar
                                 icon:bgColor:
                                   type: string
-                                  description: A six-character hexadecimal colour code assigned to the user. This
+                                  description:
+                                    A six-character hexadecimal colour code assigned to the user. This
                                     value is used in conjunction with
                                     `icon:text` for the user's auto-generated
                                     icon
