--- a/public/openapi/read/unread.yaml
+++ b/public/openapi/read/unread.yaml
@@ -81,7 +81,8 @@ get:
                                   type: string
                                 userslug:
                                   type: string
-                                  description: An URL-safe variant of the username (i.e. lower-cased, spaces
+                                  description:
+                                    An URL-safe variant of the username (i.e. lower-cased, spaces
                                     removed, etc.)
                                 reputation:
                                   type: number
@@ -99,12 +100,14 @@ get:
                                   type: string
                                 icon:text:
                                   type: string
-                                  description: A single-letter representation of a username. This is used in the
+                                  description:
+                                    A single-letter representation of a username. This is used in the
                                     auto-generated icon given to users without
                                     an avatar
                                 icon:bgColor:
                                   type: string
-                                  description: A six-character hexadecimal colour code assigned to the user. This
+                                  description:
+                                    A six-character hexadecimal colour code assigned to the user. This
                                     value is used in conjunction with
                                     `icon:text` for the user's auto-generated
                                     icon
@@ -128,6 +131,19 @@ get:
                               type: object
                               nullable: true
                               properties:
+                                endorsedVotes:
+                                  type: array
+                                  items:
+                                    type: object
+                                    properties:
+                                      username:
+                                        type: string
+                                      uid:
+                                        type: number
+                                      displayname:
+                                        type: string
+                                      isLocal:
+                                        type: boolean
                                 pid:
                                   type: number
                                 uid:
@@ -161,19 +177,22 @@ get:
                                       type: boolean
                                     userslug:
                                       type: string
-                                      description: An URL-safe variant of the username (i.e. lower-cased, spaces
+                                      description:
+                                        An URL-safe variant of the username (i.e. lower-cased, spaces
                                         removed, etc.)
                                     picture:
                                       nullable: true
                                       type: string
                                     icon:text:
                                       type: string
-                                      description: A single-letter representation of a username. This is used in the
+                                      description:
+                                        A single-letter representation of a username. This is used in the
                                         auto-generated icon given to users
                                         without an avatar
                                     icon:bgColor:
                                       type: string
-                                      description: A six-character hexadecimal colour code assigned to the user. This
+                                      description:
+                                        A six-character hexadecimal colour code assigned to the user. This
                                         value is used in conjunction with
                                         `icon:text` for the user's
                                         auto-generated icon
