--- a/public/openapi/read/admin/extend/plugins.yaml
+++ b/public/openapi/read/admin/extend/plugins.yaml
@@ -238,6 +238,8 @@ get:
                           type: string
                         latest:
                           type: string
+                        url:
+                          type: string
                         numInstalls:
                           type: number
                         isCompatible:
