fix(api): add anonymous field to PostObject OpenAPI schema

--- a/public/openapi/components/schemas/PostObject.yaml
+++ b/public/openapi/components/schemas/PostObject.yaml
@@ -34,6 +34,9 @@ PostObject:
     sourceContent:
       type: string
       nullable: true
+    anonymous:
+      type: number
+      description: Whether this post was made anonymously (1 for anonymous, 0 for not)
     uid:
       type: number
       description: A user identifier
@@ -203,6 +206,9 @@ PostDataObject:
           type: string
         timestamp:
           type: number
+        anonymous:
+          type: number
+          description: Whether this post was made anonymously (1 for anonymous, 0 for not)
         votes:
           type: number
         deleted:
