fix(openapi): add missing isAdmin field to topic privileges schema

--- a/public/openapi/read/topic/topic_id.yaml
+++ b/public/openapi/read/topic/topic_id.yaml
@@ -150,6 +150,8 @@ get:
                         type: boolean
                       isAdminOrMod:
                         type: boolean
+                      isAdmin:
+                        type: boolean
                       disabled:
                         type: number
                       tid:
