chore: add missing example for tag query parameter in category topics schema

--- a/public/openapi/write/categories/cid/topics.yaml
+++ b/public/openapi/write/categories/cid/topics.yaml
@@ -49,6 +49,7 @@ get:
         type: string
       required: false
       description: Topic tag to filter by
+      example: ''
   responses:
     '200':
       description: ''
