--- a/public/openapi/read/categories.yaml
+++ b/public/openapi/read/categories.yaml
@@ -174,6 +174,9 @@ get:
                                   sourceContent:
                                     type: string
                                     nullable: true
+                                  anonymous:
+                                    type: number
+                                    description: Whether this post was made anonymously (1 for anonymous, 0 for not)
                                   timestampISO:
                                     type: string
                                     description: An ISO 8601 formatted date string (complementing `timestamp`)
