--- a/public/openapi/read/unread.yaml
+++ b/public/openapi/read/unread.yaml
@@ -159,6 +159,9 @@ get:
                                 sourceContent:
                                   type: string
                                   nullable: true
+                                anonymous:
+                                  type: number
+                                  description: Whether this post was made anonymously (1 for anonymous, 0 for not)
                                 timestampISO:
                                   type: string
                                   description: An ISO 8601 formatted date string (complementing `timestamp`)
