--- a/public/openapi/read/admin/settings/post.yaml
+++ b/public/openapi/read/admin/settings/post.yaml
@@ -17,4 +17,6 @@ get:
                     type: array
                     items:
                       $ref: ../../../components/schemas/GroupObject.yaml#/GroupDataObject
+                  allowAnonymousPosts:
+                    type: boolean
               - $ref: ../../../components/schemas/CommonProps.yaml#/CommonProps
