fix: topic schema test

--- a/public/openapi/components/schemas/TopicObject.yaml
+++ b/public/openapi/components/schemas/TopicObject.yaml
@@ -3,6 +3,8 @@ TopicObject:
     - $ref: "#/TopicObjectSlim"
     - type: object
       properties:
+        type:
+          type: string
         lastposttime:
           type: number
         category:
@@ -112,6 +114,9 @@ TopicObject:
             sourceContent:
               type: string
               nullable: true
+            anonymous:
+              type: number
+              description: Whether this post was made anonymously (1 for anonymous, 0 for not)
             endorsedVotes:
               type: array
               items:
