--- a/public/openapi/components/schemas/TopicObject.yaml
+++ b/public/openapi/components/schemas/TopicObject.yaml
@@ -114,9 +114,6 @@ TopicObject:
             sourceContent:
               type: string
               nullable: true
-            anonymous:
-              type: number
-              description: Whether this post was made anonymously (1 for anonymous, 0 for not)
             endorsedVotes:
               type: array
               items:
@@ -295,6 +292,8 @@ TopicObjectSlim:
             - type: number
             - type: string
           nullable: true
+        type:
+          type: string
         thumbs:
           type: array
           items:
